Fixes NB#214475 - Panning continues slowly for too long

--- a/base/meegotouch/libmeegotouchviews/style/mpannablewidgetstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mpannablewidgetstyle.css
@@ -3,8 +3,8 @@ MPannableWidgetStyle {
     pan-threshold: 15.0;
     pan-click-threshold: 0.2;
     pointer-spring-k: 0.25;
-    friction-c: 0.6;
-    sliding-friction-c: 0.04;
+    friction-c: 0.8;
+    sliding-friction-c: 0.07;
     border-spring-k: 0.09;
     border-friction-c: 0.45;
 
